added all assets to github

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-/assets/photographers/Ellie Rose/
-/assets/photographers/Marcel/
-/assets/photographers/Mimi/
-/assets/photographers/Nabeel/
-/assets/photographers/Id/
-/assets/photographers/Rhode/
-/assets/photographers/Tracy/
+/node_modules/
